# bonsai-loop

./: .dir-locals.el  .gitignore  .gitmodules  Makefile  README.md  activate-venv  pyproject.toml  pyrightconfig.json
.github/workflows/: format.yml
notebooks/: .gitignore  2d-human-gastruloid-pgc-endo-convergence.ipynb  deviation_score.ipynb  interal-nodes-contact-maps.ipynb
notebooks/.ipynb_checkpoints/: 2d-human-gastruloid-pgc-endo-convergence-checkpoint.ipynb
scripts/: README.md  run_bonsai.sh  run_bonsai_preprocess.sh  run_bonsai_web.sh  run_sanity.sh
src/bonsai_loop/: __init__.py  bonsai_lib.py  convergence.py
