[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.22,<0.10" ]

[project]
name = "bonsai-loop"
version = "0.1.0"
description = "A data analysis project using Bonsai-data-representation"
readme = "README.md"
authors = [
  { name = "Zhiyuan (Stan) Yu", email = "zyyu@umich.edu" },
  { name = "Daan de Groot", email = "daanhugodegroot@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = []
