[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.22,<0.10" ]

[project]
name = "bonsai-loop"
version = "0.1.1"
description = "A data analysis project using Bonsai-data-representation"
readme = "README.md"
authors = [
  { name = "Zhiyuan (Stan) Yu", email = "zyyu@umich.edu" },
  { name = "Daan de Groot", email = "daanhugodegroot@gmail.com" },
  { name = "Idse Heemskerk", email = "idse.heemskerk@gmail.com" }
]
requires-python = ">=3.9,<3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
]
dependencies = [
  "dtne>=0.5.1",
  "faicons==0.2.2",
  "h5py==3.11",
  "jinja2==3.1.3",
  "jupyterlab>=4.5.6",
  # bonsai-scout
  "matplotlib==3.8.4",
  # bonsai requirements
  "natsort==8.4",
  "phate>=2",
  "psutil==7.1.3",
  "ruamel-yaml==0.18.6",
  "scanpy>=1.10.3",
  "scikit-learn==1.5.2",
  "scipy==1.13.1",
  "shiny==0.9",
  "shinyswatch==0.6.1",
  "tables==3.9.2",
]

# this is needed in case need to build pytables locally (e.g. for arm)
[tool.uv]
build-constraint-dependencies = [
  "blosc2<2.6.2",
  "numpy<2",
]

[tool.ruff]
line-length = 88
exclude = [
  "Bonsai-data-representation",
  "Sanity",
]
lint.per-file-ignores."src/bonsai_loop/bonsai_lib.py" = [ "E402" ]
